# AtlanticBeast

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Engine/Application/: CMakeLists.txt
Engine/Application/Private/: AppResources.cpp  AppStatus.cpp
Engine/Application/Private/Input/: IBindMap.hpp  KeysMap.cpp  KeysMap.hpp  MouseMap.cpp  MouseMap.hpp  UserInput.cpp
Engine/Application/Private/Window/: BaseWindowDetails.cpp  WindowDesc.c  WindowDesc.cpp
Engine/Application/Private/Window/WindowPolicy/Linux/: BasicLinuxPolicy.cpp  GameLinuxPolicy.cpp  X11ErrorHandling.hpp
Engine/Application/Private/Window/WindowPolicy/Win32/: BasicWin32Policy.cpp  GameWin32Policy.cpp  (+1 more)
Engine/Application/Public/: App.h  AppResources.hpp  AppStatus.hpp  EmptyCanvas.hpp  EmptyWindow.hpp
Engine/Application/Public/Input/: Bind.h  ControllerObject.hpp  IBindMap.hpp  InputEvents.h  KeyBind.hpp  KeyList.hpp  KeysMap.hpp  MouseMap.hpp  UserInput.hpp
Engine/Application/Public/Window/: BaseWindowDetails.h  IBaseWindow.hpp  WindowDesc.h  WindowDesc.hpp  WindowEvents.h  WindowListener.hpp
Engine/Application/Public/Window/WindowPolicy/: BasicSystemPolicy.hpp  GameSystemPolicy.hpp  IWindowPolicy.hpp
Engine/Core/: CMakeLists.txt
Engine/Core/Private/: AppResources.cpp  AppStatus.cpp  BaseWindowDetails.c  BaseWindowDetails.cpp  Core.cpp  EmptyCanvas.cpp  EmptyCanvasLinux.cpp  EmptyCanvasWin32.cpp  Exception.cpp  IWindow.cpp  Logger.cpp  UserInput.cpp  WindowDesc.c
Engine/Core/Private/Debug/: Logger.cpp
Engine/Core/Private/Input/: KeysMap.cpp  UserInput.cpp
Engine/Core/Private/Synchronization/: DeltaTime.cpp  FpsLimiter.cpp
Engine/Core/Private/Window/: BaseWindowDetails.c  BaseWindowDetails.cpp  BaseWindowDetailsTemp.cpp  EmptyCanvas.cpp  WindowDesc.c  WindowDesc.cpp
Engine/Core/Public/: AbLimits.h  AppResources.hpp  AppStatus.hpp  BaseWindowDetails.h  CPlusPlusStandard.hpp  CSystem.h  CSystem.hpp  Core.h  CoreMinimal.h  DebugAssert.h  EmptyCanvas.hpp  EmptyWindow.hpp  Exception.hpp  ExportImport.h  IBaseWindow.hpp  IWindow.hpp  InputEvents.h  Logger.hpp  MinimalLinuxIncludes.h  MinimalSystemIncludes.h  MinimalWindowsIncludes.h  SystemIncludes.h  UserInput.hpp  WindowDesc.h
Engine/Core/Public/Debug/: Assert.h  Assert.hpp  Logger.hpp
Engine/Core/Public/Input/: ControllerObject.hpp  InputEvents.h  InputHandler.hpp  KeyBind.hpp  KeyList.hpp  KeysMap.hpp  UserInput.hpp
Engine/Core/Public/Synchronization/: DeltaTime.hpp  FpsLimiter.hpp
Engine/Core/Public/Window/: BaseWindowDetails.h  IBaseWindow.hpp  WindowDesc.h
Engine/Core/Public/Window/WindowPolicy/: BasicSystemPolicy.hpp  IWindowPolicy.hpp
Engine/Math/: CMakeLists.txt
Engine/Math/Private/Primitives/: Object.cpp
Engine/Math/Public/: Consts.hpp  Math.hpp  Operations.hpp  Rot.hpp  Vec3.hpp  Vec3Operators.hpp  Vec4.hpp
Engine/Math/Public/Primitives/: Cube.hpp  Object.hpp
Engine/Rendering/: CMakeLists.txt  shaders.cmake
Engine/Rendering/Private/: Voxels.cpp
Engine/Rendering/Private/Primitives/: Object.cpp
Engine/Rendering/Private/Raycaster/: Rays.cpp  Renderer.cpp  VoxelGrid.cpp  VoxelPipeline.cpp
Engine/Rendering/Private/Synchronization/: DeltaTime.cpp  FpsLimiter.cpp
Engine/Rendering/Private/Vulkan/: ComputeAdapter.cpp  Instance.cpp  Memory.cpp  MinimalHardware.cpp  RTXDeviceAdapter.cpp  RTXHardware.cpp  SwapChain.cpp  WrapperAdapter.cpp  WrapperHardware.cpp
Engine/Rendering/Public/: Voxels.hpp
Engine/Rendering/Public/Math/: Mat4.hpp  Operations.hpp  Rot.hpp  Vec3Operators.hpp  Vec4.hpp
Engine/Rendering/Public/Primitives/: BasicColoredCube.hpp  ColoredCube.hpp  Cube.hpp  Object.hpp
Engine/Rendering/Public/Primitives/MaterialProperties/: ColorProperty.hpp  IMaterialProperties.hpp  ReflectionProperty.hpp  RoughnessProperty.hpp
Engine/Rendering/Public/Raycaster/: PushConstants.hpp  Rays.hpp  Renderer.hpp  SingleVoxel.hpp  VoxelGrid.hpp  VoxelPipeline.hpp
Engine/Rendering/Public/Shaders/: Colors.glsl  Common.glsl  Math.glsl  Primitves.glsl  Random.glsl  Raycast.comp  RaycastAABB.comp
Engine/Rendering/Public/Synchronization/: DeltaTime.hpp  FpsLimiter.hpp
Engine/Rendering/Public/Vulkan/: ComputeAdapter.hpp  FrameResources.hpp  GPUBuffer.hpp  GPUStreamBuffer.hpp  IAdapter.hpp  Instance.hpp  Memory.hpp  MemoryUploadTracker.hpp  MinimalHardware.hpp  RTXDeviceAdapter.hpp  RTXHardware.hpp  SwapChain.hpp  WrapperAdapter.hpp  WrapperHardware.hpp
Engine/Voxels/: CMakeLists.txt
Engine/Voxels/Private/: DeviceAdapter.cpp  Hardware.cpp  Instance.cpp  Pipeline.cpp  Renderer.cpp  SwapChain.cpp  VoxelGrid.cpp  Voxels.cpp
Engine/Voxels/Private/Math/: Vec3.cpp
Engine/Voxels/Private/Primitives/: Object.cpp
Engine/Voxels/Private/Raycaster/: Pipeline.cpp  Rays.cpp  Renderer.cpp  VoxelGrid.cpp  VoxelPipeline.cpp
Engine/Voxels/Private/Vulkan/: ComputeAdapter.cpp  DeviceAdapter.cpp  Hardware.cpp  Instance.cpp  MinimalHardware.cpp  RTXDeviceAdapter.cpp  RTXHardware.cpp  SwapChain.cpp  WrapperAdapter.cpp  WrapperHardware.cpp
Engine/Voxels/Public/: DeviceAdapter.hpp  ErrorHandling.hpp  Hardware.hpp  Instance.hpp  Pipeline.hpp  PushConstants.hpp  Renderer.hpp  SingleVoxel.hpp  SwapChain.hpp  VoxelGrid.hpp  Voxels.h  Voxels.hpp
Engine/Voxels/Public/Math/: Consts.hpp  Mat4.hpp  Math.hpp  Operations.hpp  Rays.hpp  Vec3.hpp  Vec3Operators.hpp  Vec4.hpp
Engine/Voxels/Public/Primitives/: Camera.hpp  Cube.hpp  Object.hpp
Engine/Voxels/Public/Raycaster/: Pipeline.hpp  PushConstants.hpp  Rays.hpp  Renderer.hpp  SingleVoxel.hpp  VoxelFrameResources.hpp  VoxelGrid.hpp  VoxelPipeline.hpp
Engine/Voxels/Public/Shaders/: Raycast.comp  RaycastAABB.comp
Engine/Voxels/Public/Vulkan/: ComputeAdapter.hpp  DeviceAdapter.hpp  ErrorHandling.hpp  FrameResources.hpp  GPUBuffer.hpp  GPUStreamBuffer.hpp  Hardware.hpp  IAdapter.hpp  MinimalHardware.hpp  RTXDeviceAdapter.hpp  RTXHardware.hpp  SwapChain.hpp  WrapperAdapter.hpp  WrapperHardware.hpp
Project/: CMakeLists.txt
Project/Assets/: Raycast.comp
Project/Source/: CameraController.hpp  Game.hpp  MainCharacter.hpp  PlayableCharacter.cpp  main.cpp
(+12 files in other folders)
