CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(AtlanticBeast)

STRING(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" TARGET_ARCH)

IF(NOT TARGET_ARCH OR TARGET_ARCH STREQUAL "")
    SET(TARGET_ARCH "unknown")
ENDIF()

IF(NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE=="Debug")

    SET(CMAKE_BUILD_TYPE "Debug")
	ADD_COMPILE_DEFINITIONS(_DEBUG)

ENDIF()


SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_C_STANDARD 17)
SET(CMAKE_C_STANDARD_REQUIRED ON)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Bin/${TARGET_ARCH}/${CMAKE_BUILD_TYPE})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Lib/${TARGET_ARCH}/${CMAKE_BUILD_TYPE})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Lib/${TARGET_ARCH}/${CMAKE_BUILD_TYPE})

ADD_COMPILE_DEFINITIONS(_CRT_SECURE_NO_WARNINGS)
ADD_COMPILE_DEFINITIONS(UNICODE)
ADD_COMPILE_DEFINITIONS(_UNICODE)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Engine)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Project)


SET(SHADER_SRC_DIR "${CMAKE_SOURCE_DIR}/Project/Assets")
SET(SHADER_BIN_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Assets")

FILE(GLOB SHADERS "${SHADER_SRC_DIR}/*.comp")
FILE(MAKE_DIRECTORY "${SHADER_BIN_DIR}")

SET(COMPILED_SHADERS)

IF (SHADERS)

    FOREACH(SHADER_PATH ${SHADERS})
    
        GET_FILENAME_COMPONENT(SHADER_NAME ${SHADER_PATH} NAME)
        SET(SPIRV_PATH "${SHADER_BIN_DIR}/${SHADER_NAME}.spv")
    
        ADD_CUSTOM_COMMAND(
            OUTPUT ${SPIRV_PATH}
            COMMAND glslangValidator -V ${SHADER_PATH} -o ${SPIRV_PATH}
            DEPENDS ${SHADER_PATH}
            COMMENT "Compiling shader ${SHADER_NAME}"
            VERBATIM
        )
    
        LIST(APPEND COMPILED_SHADERS ${SPIRV_PATH})
    
    ENDFOREACH()

    ADD_CUSTOM_TARGET(CompileShaders ALL
        DEPENDS ${COMPILED_SHADERS}
        COMMENT "Compiling shaders"
    )

ENDIF()

ADD_DEPENDENCIES(AtlBee CompileShaders)

