CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(AtlanticBeast)

STRING(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" TARGET_ARCH)

IF(NOT TARGET_ARCH OR TARGET_ARCH STREQUAL "")

    SET(TARGET_ARCH "unknown")

ENDIF()

IF(NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE=="Debug")

    SET(CMAKE_BUILD_TYPE "Debug")
	ADD_COMPILE_DEFINITIONS(_DEBUG)

ENDIF()

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

IF (MSVC)

    set(CMAKE_MSVC_RUNTIME_LIBRARY 
        "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL" CACHE STRING "" FORCE)

    add_compile_options("/GR-")

    add_compile_options("/permissive-")

ENDIF()

SET(CMAKE_C_STANDARD 17)
SET(CMAKE_C_STANDARD_REQUIRED ON)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Bin/${TARGET_ARCH}/${CMAKE_BUILD_TYPE})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Lib/${TARGET_ARCH}/${CMAKE_BUILD_TYPE})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Lib/${TARGET_ARCH}/${CMAKE_BUILD_TYPE})

ADD_COMPILE_DEFINITIONS(_CRT_SECURE_NO_WARNINGS)
ADD_COMPILE_DEFINITIONS(UNICODE)
ADD_COMPILE_DEFINITIONS(_UNICODE)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Engine)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Project)

