SET(MATH_SOURCE 
    "${CMAKE_CURRENT_SOURCE_DIR}/Private/Math.cpp"
)
SET(MATH_HEADRES 
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Consts.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Mat4.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Operations.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Rot.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Vec3.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Vec3Operators.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Vec4.hpp"
)

ADD_LIBRARY(MathLib SHARED
    "${MATH_SOURCE}"
    "${MATH_HEADRES}"
)

TARGET_INCLUDE_DIRECTORIES(MathLib PUBLIC 
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/"
)

TARGET_LINK_LIBRARIES(MathLib PUBLIC 
    CoreLib
)

TARGET_PRECOMPILE_HEADERS(MathLib PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Public/Math.hpp")

TARGET_COMPILE_DEFINITIONS(MathLib PRIVATE _BEAST_EXPORTS)


