FILE(GLOB_RECURSE VOXELS_SOURCE 
    "${CMAKE_CURRENT_SOURCE_DIR}/Private/*.*"
)
FILE(GLOB_RECURSE VOXELS_HEADRES 
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/*.hpp"
)

ADD_LIBRARY(VoxelsLib 
    "${VOXELS_SOURCE}"
    "${VOXELS_HEADRES}"
)

FIND_PACKAGE(Vulkan REQUIRED)

TARGET_INCLUDE_DIRECTORIES(VoxelsLib PUBLIC 
    "${Vulkan_INCLUDE_DIRS}"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/"
)

TARGET_LINK_LIBRARIES(VoxelsLib PUBLIC 
    "${Vulkan_LIBRARIES}"
    CoreLib
)

TARGET_SOURCES(VoxelsLib PUBLIC
    "${VOXELS_SOURCE}"
    "${VOXELS_HEADRES}"
)

